--- a/testdata/lcd6.config
+++ b/testdata/lcd6.config
@@ -1,7 +1,7 @@
-lcd1=81,0,70,136,-9,135,21,17,-10
-digit0=lcd1,284,253
-digit1=lcd1,394,251
-digit2=lcd1,508,252
-digit3=lcd1,617,252
-digit4=lcd1,731,251
-digit5=lcd1,842,252
+lcd=A,81,0,70,136,-9,135,21,17,-10
+digit=A,284,253
+digit=A,394,251
+digit=A,508,252
+digit=A,617,252
+digit=A,731,251
+digit=A,842,252
