--- a/testdata/meter.config
+++ b/testdata/meter.config
@@ -1,13 +1,13 @@
-lcd1=36,0,31,75,-8,73,8
-digit1=lcd1,373,261
-digit2=lcd1,437,261
-digit3=lcd1,495,261
-lcd2=54,0,39,117,-14,117,11,14,-4
-digit4=lcd2,692,262
-digit5=lcd2,772,262
-lcd3=54,0,45,116,-7,116,11,14,-4
-digit6=lcd3,850,263
-digit7=lcd3,932,263
-digit8=lcd3,1008,264
-digit9=lcd3,1088,264
-digit10=lcd3,1166,266
+lcd=A,36,0,31,75,-8,73,8
+digit=A,373,261
+digit=A,437,261
+digit=A,495,261
+lcd=B,54,0,39,117,-14,117,11,14,-4
+digit=B,692,262
+digit=B,772,262
+lcd=C,54,0,45,116,-7,116,11,14,-4
+digit=C,850,263
+digit=C,932,263
+digit=C,1008,264
+digit=C,1088,264
+digit=C,1166,266
