--- a/testdata/test1.config
+++ b/testdata/test1.config
@@ -1,10 +1,10 @@
-lcd1=29,0,24,74,-5,74,6,5,4
-digit0=lcd1,300,348
-digit1=lcd1,336,348
-digit2=lcd1,370,348
-digit3=lcd1,407,348
-digit4=lcd1,443,348
-digit5=lcd1,480,348
-digit6=lcd1,517,348
-digit7=lcd1,555,349
+lcd=A,29,0,24,74,-5,74,6,5,4
+digit=A,300,348
+digit=A,336,348
+digit=A,370,348
+digit=A,407,348
+digit=A,443,348
+digit=A,480,348
+digit=A,517,348
+digit=A,555,349
 threshold=15
