--- a/testdata/test2.config
+++ b/testdata/test2.config
@@ -1,10 +1,10 @@
-lcd1=-29,0,-24,-74,5,-74,6,-6,-5
-digit0=lcd1,499,251
-digit1=lcd1,463,251
-digit2=lcd1,429,251
-digit3=lcd1,392,251
-digit4=lcd1,356,251
-digit5=lcd1,319,251
-digit6=lcd1,283,251
-digit7=lcd1,244,250
+lcd=A,-29,0,-24,-74,5,-74,6,-6,-5
+digit=A,499,251
+digit=A,463,251
+digit=A,429,251
+digit=A,392,251
+digit=A,356,251
+digit=A,319,251
+digit=A,283,251
+digit=A,244,250
 threshold=15
