--- a/testdata/test3.config
+++ b/testdata/test3.config
@@ -1,10 +1,10 @@
-lcd1=0,29,-74,24,-74,-5,6,-4,6
-digit0=lcd1,251,300
-digit1=lcd1,251,336
-digit2=lcd1,251,370
-digit3=lcd1,251,407
-digit4=lcd1,251,443
-digit5=lcd1,251,480
-digit6=lcd1,251,516
-digit7=lcd1,251,555
+lcd=A,0,29,-74,24,-74,-5,6,-4,6
+digit=A,251,300
+digit=A,251,336
+digit=A,251,370
+digit=A,251,407
+digit=A,251,443
+digit=A,251,480
+digit=A,251,516
+digit=A,251,555
 threshold=15
