--- a/testdata/test4.config
+++ b/testdata/test4.config
@@ -1,10 +1,10 @@
-lcd1=0,-29,74,-24,74,5,6,4,-5
-digit0=lcd1,348,499
-digit1=lcd1,348,463
-digit2=lcd1,348,429
-digit3=lcd1,348,392
-digit4=lcd1,348,356
-digit5=lcd1,348,319
-digit6=lcd1,348,283
-digit7=lcd1,348,244
+lcd=A,0,-29,74,-24,74,5,6,4,-5
+digit=A,348,499
+digit=A,348,463
+digit=A,348,429
+digit=A,348,392
+digit=A,348,356
+digit=A,348,319
+digit=A,348,283
+digit=A,348,244
 threshold=15
