--- a/sample.conf
+++ b/sample.conf
@@ -1,23 +1,22 @@
 [meter]
-rotate=215.5
+#rotate=215.5
 source=http://meter:8080/image
 threshold=50
-calibrate=/var/cache/MeterMan/calibrate8888.jpg
-lcd=S1,39,0,29,73,-10,73,8
-digit=S1,87,469
-digit=S1,145,468
-digit=S1,201,467
-digit=S1,258,466
-lcd=L1,51,0,38,110,-13,110,10
-lcd=L2,49,0,40,110,-9,110,10
-digit=L1,330,465
-digit=L1,403,465
-digit=L1,475,464
-digit=L1,546,463
-digit=L2,617,461
-digit=L2,689,459
-digit=L2,761,458
-digit=L2,832,456
+calibrate=image.jpeg
+lcd=S1,-32,24,-69,-39,-36,-62,7
+digit=S1,754,86
+digit=S1,710,120
+digit=S1,662,154
+digit=S1,615,187
+lcd=L1,-42,30,-98,-64,-55,-95,10
+digit=L1,557,228
+digit=L1,499,275
+digit=L1,441,316
+digit=L1,382,359
+digit=L1,325,401
+digit=L1,268,446
+digit=L1,209,487
+digit=L1,152,529
 range=1NtL,0,15
 range=tP  ,-6,15
 range=EHtL,0,20
