Treat bounding box as array.

--- a/sample.conf
+++ b/sample.conf
@@ -2,7 +2,7 @@
 #rotate=215.5
 source=http://meter:8080/image
 threshold=50
-calibrate=image.jpeg
+calibrate=/var/cache/MeterMan/unrotated.jpeg
 lcd=S1,-32,24,-69,-39,-36,-62,7
 digit=S1,754,86
 digit=S1,710,120
