--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 MeterMan
 utils/sample/sample
 utils/scandump/scandump
+utils/readtemp/readtemp
+utils/smaping/smaping
 grab/grab
 
 # Test binary, build with `go test -c`
