--- a/sample.conf
+++ b/sample.conf
@@ -1,23 +1,23 @@
 [meter]
 #rotate=215.5
-source=http://meter:8080/image
+source=http://metercam:8080/image.jpg
 threshold=50
-calibrate=/var/cache/MeterMan/unrotated.jpeg
-lcd=S1,-32,24,-69,-39,-36,-62,7
-digit=S1,754,86
-digit=S1,710,120
-digit=S1,662,154
-digit=S1,615,187
-lcd=L1,-42,30,-98,-64,-55,-95,10
-digit=L1,557,228
-digit=L1,499,275
-digit=L1,441,316
-digit=L1,382,359
-digit=L1,325,401
-digit=L1,268,446
-digit=L1,209,487
-digit=L1,152,529
-range=1NtL,0,15
+calibration=/var/cache/MeterMan/calibration
+lcd=S1,-30,25,-66,-39,-36,-62,7
+digit=S1,759,81
+digit=S1,713,115
+digit=S1,667,150
+digit=S1,620,184
+lcd=L1,-40,30,-96,-64,-55,-95,10
+digit=L1,563,228
+digit=L1,503,272
+digit=L1,445,315
+digit=L1,387,359
+digit=L1,329,403
+digit=L1,272,446
+digit=L1,215,490
+digit=L1,157,534
+range=1NtL,0,20
 range=tP  ,-6,15
 range=EHtL,0,20
 range=EHL1,0,20
