Add offset config to shift all digits.

--- a/sample.conf
+++ b/sample.conf
@@ -2,6 +2,7 @@
 #rotate=215.5
 source=http://metercam:8080/image.jpg
 threshold=50
+offset=0,0
 calibration=/var/cache/MeterMan/calibration
 lcd=S1,-29,24,-67,-37,-39,-61,7
 digit=S1,731,67
