Move LCD utils to lcd/utils

--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,12 @@
 *.so
 *.dylib
 MeterMan
-utils/rotate/rotate
-utils/sample/sample
-utils/scandump/scandump
+lcd/utils/rotate/rotate
+lcd/utils/sample/sample
+lcd/utils/scandump/scandump
+lcd/utils/calibrate/calibrate
 utils/readtemp/readtemp
 utils/smaping/smaping
-utils/calibrate/calibrate
 
 # Test binary, build with `go test -c`
 *.test
