config: Switch to YAML for config.

--- a/example.conf
+++ b/example.conf
@@ -1,50 +1,92 @@
-[weather]
-tempservice=openweather
-bom=http://www.bom.gov.au/fwo/<bom URL>
-tempid=<location id>
-tempkey=<key>
-darkskykey=<key>
-darkskylat=<latitude>
-darkskylong=<longitude>
-[sma]
-inverter=inverter:9522,<password>
-inverter=inverter2:9522,<password>
-[meter]
-source=http://metercam:8080/image.jpg
-threshold=50
-offset=0,0
-lcd=S1,-29,24,-67,-37,-39,-61,7
-digit=S1,731,67
-digit=S1,685,104
-digit=S1,642,139
-digit=S1,597,174
-lcd=L1,-40,32,-97,-62,-60,-93,10
-digit=L1,542,218
-digit=L1,485,264
-digit=L1,427,311
-digit=L1,371,358
-digit=L1,314,404
-digit=L1,258,450
-digit=L1,202,497
-digit=L1,145,542
-range=1NtL,0,20
-range=tP  ,-12,15
-range=EHtL,0,40
-range=EHL1,0,40
-range=EHL2,0,40
-range=1NL1,0,40
-range=1NL2,0,40
-[pvoutput]
+weather:
+  tempservice: openweather
+  bom: http://www.bom.gov.au/fwo/<bom URL>
+  tempid: <location id>
+  tempkey: <key>
+  darkskykey: <key>
+  darkskylat: <latitude>
+  darkskylong: <longitude>
+sma:
+  - addr inverter:9522
+    password: <password>
+    poll: 50
+    retry: 61
+  - addr inverter2:9522
+    password: <password>
+    poll: 50
+    retry: 30
+meter:
+  source: http://metercam:8080/image.jpg
+  threshold: 50
+  offset: [0, 0]
+  lcd:
+    - name: S1
+      tr: [-29, 24]
+      br: [-67, -37]
+      bl: [-39, -61]
+      width: 7
+    - name: L1
+      tr: [-40, 32]
+      br: [-97, -62]
+      bl: [-60, -93]
+      width: 10
+  digit:
+    - lcd: S1
+      coord: [731,67]
+    - lcd: S1
+      coord: [685,104]
+    - lcd: S1
+      coord: [642,139]
+    - lcd: S1
+      coord: [597,174]
+    - lcd: L1
+      coord: [542,218]
+    - lcd: L1
+      coord: [485,264]
+    - lcd: L1
+      coord: [427,311]
+    - lcd: L1
+      coord: [371,358]
+    - lcd: L1
+      coord: [314,404]
+    - lcd: L1
+      coord: [258,450]
+    - lcd: L1
+      coord: [202,497]
+    - lcd: L1
+      coord: [145,542]
+  range:
+    - key: "1NtL"
+      min: 0
+      max: 20
+    - key: "tp  "
+      min: -12
+      max: 15
+    - key: "EHtL"
+      min: 0
+      max: 40
+    - key: "EHL1"
+      min: 0
+      max: 40
+    - key: "EHL2"
+      min: 0
+      max: 40
+    - key: "1NL1"
+      min: 0
+      max: 40
+    - key: "1NL2"
+      min: 0
+      max: 40
 # Data for pvoutput upload.
-apikey=<apikey>
-systemid=<system ID>
-pvurl=https://pvoutput.org/service/r2/addstatus.jsp
-[csv]
+pvoutput:
+  apikey: <apikey>
+  systemid: <system ID>
+  pvurl: https://pvoutput.org/service/r2/addstatus.jsp
 # Write CSV values to file.
-csv=/var/cache/MeterMan/csv
+csv: var/lib/MeterMan/csv
 #
 # Home Assistant integration
 #
-[hassi]
-url=<home assistant URL>
-apikey=<apikey>
+hassi:
+  url: <home assistant URL>
+  apikey: <apikey>
