meter: Create slices before copying

--- a/example.conf
+++ b/example.conf
@@ -7,16 +7,16 @@ weather:
   darkskylat: <latitude>
   darkskylong: <longitude>
 sma:
-  - addr inverter:9522
+  - addr: inverter:9522
     password: <password>
     poll: 50
     retry: 61
-  - addr inverter2:9522
+  - addr: inverter2:9522
     password: <password>
     poll: 50
     retry: 30
 meter:
-  source: http://metercam:8080/image.jpg
+  source: "http://metercam:8080/image.jpg"
   threshold: 50
   offset: [0, 0]
   lcd:
@@ -59,7 +59,7 @@ meter:
     - key: "1NtL"
       min: 0
       max: 20
-    - key: "tp  "
+    - key: "tP  "
       min: -12
       max: 15
     - key: "EHtL"
@@ -81,7 +81,7 @@ meter:
 pvoutput:
   apikey: <apikey>
   systemid: <system ID>
-  pvurl: https://pvoutput.org/service/r2/addstatus.jsp
+  pvurl: "https://pvoutput.org/service/r2/addstatus.jsp"
 # Write CSV values to file.
 csv: var/lib/MeterMan/csv
 #
