csv: Cleaned up flags, added interval config

--- a/example.conf
+++ b/example.conf
@@ -85,7 +85,8 @@ pvoutput:
   systemid: <system ID>
   pvurl: "https://pvoutput.org/service/r2/addstatus.jsp"
 # Write CSV values to file.
-csv: var/lib/MeterMan/csv
+csv:
+  base: /var/lib/MeterMan/csv
 #
 # Home Assistant integration
 #
