iammeter: Remove old flags

--- a/example.conf
+++ b/example.conf
@@ -15,6 +15,9 @@ sma:
     password: <password>
     poll: 50
     retry: 30
+iammeter:
+  meter: http://admin:admin@meter-hostname/monitorjson
+  poll: 30
 meter:
   source: "http://metercam:8080/image.jpg"
   threshold: 50
