--- a/example.conf
+++ b/example.conf
@@ -1,3 +1,6 @@
+db:
+  checkpoint: <checkpoint file>
+  update: 60
 weather:
   tempservice: openweather
   bom: http://www.bom.gov.au/fwo/<bom URL>
